[package]
name = "hello_world_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0-rc.1"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
tracing-subscriber = "0.3.19"
